Aligne le FAB de projet correctement à droite
J'ai mis la position en relative par rapport à la colonne, un float right puis j'ai ajusté la position

--- a/src/app/components/page/user-project/user-project.component.scss
+++ b/src/app/components/page/user-project/user-project.component.scss
@@ -106,10 +106,10 @@ mat-expansion-panel-header {
 }
 
 button[mat-fab] {
-    right: unset;
-    left: 25vw;
     position: relative;
-    bottom: 20vh;
+    float: right;
+    bottom: 10rem;
+    right: 1rem;
 }
 
 .locked {
